--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+title: "The Output"
+author: "AS"
+description: "A collection of thoughts on policy matters and otherwise."
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
